@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2013-2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2013-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -65,6 +65,9 @@ public:
 	}
 
 	std::string digest () const;
+
+	std::list<dcp::Channel> mapped_dcp_channels () const;
+	void unmap_all ();
 	
 private:
 	void setup (int);
