@@ -1,3 +1,9 @@
+2015-03-24  Carl Hetherington  <cth@carlh.net>
+
+	* Hand-apply 7ba9dcdbfe8f0d94ad9887843995c152c45dfe9e from master;
+	allow "deletion" of the audio part of a FFmpeg file from the
+	timeline; delete unmaps the audio (#316).
+
 2015-02-25  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.41 released.
